<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <TextView
    android:id="@+id/font_tv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:text="@string/ls_font"
    android:textSize="14sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <RadioGroup
    android:id="@+id/fonts_rg"
    android:layout_width="match_parent"
    android:layout_height="36dp"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/font_tv">

    <RadioButton
      android:id="@+id/open_sans_rb"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/ls_book_reading_font_family_open_sans" />

    <RadioButton
      android:id="@+id/popins_rb"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/ls_book_reading_font_family_poppins" />

    <RadioButton
      android:id="@+id/lora_rb"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/ls_book_reading_font_family_lora" />
  </RadioGroup>

  <TextView
    android:id="@+id/font_size_tv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:text="@string/ls_font_size"
    android:textSize="14sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/fonts_rg" />

  <TextView
    android:id="@+id/size_1"
    android:layout_width="0dp"
    android:layout_height="14dp"
    android:layout_marginBottom="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_weight="1"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    android:gravity="bottom"
    android:text="a"
    android:textSize="12sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/size_2"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/font_size_tv"
    android:layout_marginLeft="16dp" />

  <TextView
    android:id="@+id/size_2"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    android:gravity="bottom"
    android:text="a"
    android:textSize="14sp"
    app:layout_constraintBottom_toBottomOf="@+id/size_1"
    app:layout_constraintEnd_toStartOf="@+id/size_3"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/size_1" />

  <TextView
    android:id="@+id/size_3"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    android:gravity="bottom"
    android:text="a"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="@+id/size_2"
    app:layout_constraintEnd_toStartOf="@+id/size_4"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/size_2" />

  <TextView
    android:id="@+id/size_4"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    android:gravity="bottom"
    android:text="a"
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="@+id/size_3"
    app:layout_constraintEnd_toStartOf="@+id/size_5"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/size_3" />

  <TextView
    android:id="@+id/size_5"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_weight="1"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    android:gravity="bottom"
    android:text="a"
    android:textSize="24sp"
    app:layout_constraintBottom_toBottomOf="@+id/size_4"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/size_4"
    android:layout_marginRight="16dp" />

</android.support.constraint.ConstraintLayout>